public/css/style.css
* {
	box-sizing: border-box;
}

.container {
	width: 80%;
	margin: 0 auto;
	padding-top: 30px;
}

.brand-logo {
	width: 50px;
	height: auto;
	border-radius: 5px;
	margin-left: 30px;
	margin-top: 5px;
	position: absolute;
}

nav {
	background-color: white;
	padding-right: 20px;
}

nav .brand-logo {
	color: black;
	font-size: 16px;
}

#brand-name {
	color: black;
	padding: 0;
	position: relative;
	top: 6px;
	left: 120px;
	display: inline;
	font-size: 18px;
	font-family: 'Courgette', cursive;
}

nav ul a {
	color: black;
}

nav ul a:hover {
	background-color: white;
}

nav ul a.btn {
	margin-left: 0;
	margin-right: 0;
}

/*add spacing between buttons*/

.dropdown-button {
	background-color: #fc6d6f;
	width: 200px;
}

.dropdown-button:hover,.dropdown-button:active,.dropdown-button:focus {
	background-color: #fc5d60;
}

.dropdown-content li>a {
	color: black;
}

.waves-effect {
	background-color: #fc6d6f;
/*	margin-right: 20px;*/
}

.waves-effect:hover, .waves-effect:active, .waves-effect:focus {
	background-color: #fc5d60;
}

nav {
	padding-top: 10px;
	height: 80px;
	box-shadow: 0 1px 5px 0 #dfdfdf, 0 1px 5px 0 #dfdfdf, 0 1px 1px -2px #dfdfdf;
}

#bannerRow {
	padding-top: 20px;
	width: 100%;
	height: 400px;
	margin: 0;
	margin-bottom: -30px;
	background: url(banner3.jpg) no-repeat center center;
	padding-bottom: 0;
	-webkit-background-size: cover;    
    background-size: cover;
}

h5 {
	padding: 40px 20px 20px 58px;
	font-family: Roboto;
	font-size: 40px;
	font-weight: bolder;
}

.textonimage { 
	position: relative; 
	width: 100%;
}

h5 { 
	position: absolute; 
	top: 110px; 
	left: 0; 
	width: 100%; 
}

h5 span {
   color: white; 
   padding: 2px; 
   background: #000;
   opacity: 0.7;
   line-height: 1.4em;
}

.card .card-title {
	font-size: 20px;
	font-weight: bolder;
	color: black;
	text-align: center;
}

.card .card-title {
	font-family: 'Courgette', cursive;
	font-size: 26px;
}

.card .card-content {
	padding: 24px 10px 24px 10px;
}

p {
	font-size: 14px;
	font-weight: 350;
	color: black !important;
	padding-bottom: 10px;
}

.blue-grey.darken-1:nth-of-type(odd) {
	background-color: #e9e9e9 !important;
	width: 30%;
	margin-right: 1%;
	margin-left: 1%;
	position: relative;
}

.blue-grey.darken-1:nth-of-type(even) {
	background-color: #feeced !important;
	width: 30%;
	margin-right: 1%;
	margin-left: 1%;
	position: relative;
}

.card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating) {
	color: black;
	text-transform: lowercase;
	text-align: right;
	display: block;
	margin-right: 0;
}

.card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating):hover {
	color: black;
	font-weight: bolder;
}

.card .card-action {
	padding: 10px 20px;
}

h1 {
	font-size: 25px;
}

.fa {
	color: #FC5D60;
	float: right;
	padding-top: 5px;
}

.fa-exclamation-circle {
	padding-left: 10px;
	color: #666666;
}

#flagCounter, #heartCounter {
	color: black;
	font-family: Roboto;
	font-size: 12px;
}

#flagCounter {
	font-size: 10px;
}

.author {
	width: 40px;
	border-radius: 20px;
	float: left;
	margin-bottom: 8px;
}

.story {
	float: right;
	margin-right: 0;
	text-decoration: none !important;
	color: black;
	font-size: 12px;
	font-weight: bolder;
	padding-right: 10px;
}

.story:hover {
	font-size: 13px;
}

.date {
	font-size: 12px;
	font-style: italic;
	color: grey;
	margin-top: 30px;
	width: 100%;
	text-align: right;
	margin-left: 10px;
	padding-top: 10px;
}

#signupForm, #loginForm, #newStory {
	padding: 10px 40px 10px 35px;
	margin-top: 30px;
	margin-bottom: 30px;
	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
	background-color: #feeced;
}

#submit {
	width: 100%;
}

#submit:active, #submit:focus {
	background-color: #fc5d60;
}

input[type=text]:not(.browser-default):focus:not([readonly]), input[type=email]:not(.browser-default):focus:not([readonly]), input[type=password]:not(.browser-default):focus:not([readonly]), input[type=url]:not(.browser-default):focus:not([readonly]),textarea.materialize-textarea:focus:not([readonly]) {
	border-bottom: 1px solid #F75B61;
	box-shadow: 0 1px 0 0 #F75B61;
}

.input-field input[type=text]:focus+label,.input-field input[type=email]:focus+label,.input-field input[type=password]:focus+label,.input-field input[type=url]:focus+label,textarea.materialize-textarea:focus+label {
    color: #F75B61 !important;
}

h2 {
	font-size: 30px;
	text-align: center;
	font-family: 'Courgette', cursive;
}

label {
	color: black !important;
}

i[title]:hover:after {
	content: attr(title);
	padding: 4px 8px;
	font-size: 13px;
	font-family: Roboto;
	font-weight: bolder;
	color: white;
	background-color: #666666;
	position: absolute;
	white-space: nowrap;
	border-radius: 5px;
	z-index: 500;
}

a {
	text-decoration: none;
}

footer {
	font-size: 12px;
}

@media only screen and (max-width: 1065px) {
    .blue-grey.darken-1:nth-of-type(odd), .blue-grey.darken-1:nth-of-type(even)  {
      width: 40%;
    }

    .container .row {
    	margin-right: -120px;
    }
}

@media only screen and (max-width: 768px) {
	.blue-grey.darken-1:nth-of-type(odd), .blue-grey.darken-1:nth-of-type(even)  {
      width: 100%;
      margin-left: -14px;
    }

    .container .row {
    	margin-right: 0px;
    }
}

